data/derived/sp14/progs/unify/prog0351.ml.out
Characters 70-71:
  | Average (x', y') -> (x +. y) /. 2;;
                                    ^
Error: This expression has type int but an expression was expected of type
         float
